--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -577,10 +577,10 @@ s_{\mu_A}^2 &=  \frac{\sum (\overline{x_{A_i}}-\bar{\bar{x}})^2}{a-1} \\
 \end{aligned}
 $$
 
-When you estimate the variance is sample means this way (using the total variance formula) the number you obtain will reflect two things.
+When you estimate the variance is sample means this way (using the total variance formula) the number you obtain will reflect two things:
 
-1) Random sampling error variance: $\frac{\sigma_{people}^2}{nb}$
-2) The variance of the population means $\sigma_{\mu_A}^2$
+1) Variability in sample means due to random sampling: $\frac{\sigma_{people}^2}{nb}$
+2) Variability in sample means due differences among the population means $\sigma_{\mu_A}^2$
 
 In mathematical terms we say the Expected Mean Square is:
 
@@ -620,7 +620,7 @@ F &= \frac{\text{estimated total variance}}{\text{estimated variance due to rand
 $$
 
 
-This estimate tells us that, with these data, the **estimated** total variance is juggling means is 57.96 times larger than than we would **estimate** due to random sampling alone. This sounds like a larger number - but it may not be. Notice the use of word **estimate(d)** in the previous sentences. We are looking at estimates that themselves may vary due to random sampling error. So we need to know how likely this is in the context of the the number of sampling means and the sample sizes. Said another way, we need to interpret this F-value in terms of its degrees of freedom.
+This estimate tells us that, with these data, the **estimated** total variance of juggling means is 57.96 times larger than than we would **estimate** due to random sampling alone. This sounds like a larger number - but it may not be. Notice the use of word **estimate(d)** in the previous sentences. We are looking at estimates that themselves may vary due to random sampling error. So we need to know how likely this is in the context of the the number of sampling means and the sample sizes. Said another way, we need to interpret this F-value in terms of its degrees of freedom. [Recall Central F-distributions from a previous chapter.](https://dstanley4.github.io/psyc6060bookdown/deep-dive-sampling-and-anova.html#central-f-distributions)
 
 We know that the degrees of freedom for this F-value are (1,24). We we can ask the question, **when the population means are the same** (i.e., $\sigma_{A}^2=0$) how likely is it that would would obtain an F-value this large or larger. That is, what is the p-value for this F-value? It turns out the p-value is very small ($p < .001$). Consequently, under the assumption of equal population means, our data (or more extreme data) is very unlikely ($p < .001$). Therefore, we reject that starting assumption that the population means (i.e., the population means for yes and no juggling) are equal. We conclude those population means **may** be different.
 
@@ -735,10 +735,11 @@ $$
 
 
 
-When you estimate the variance is sample means this way (using the total variance formula) the number you obtain will reflect two things.
+When you estimate the variance is sample means this way (using the total variance formula) the number you obtain will reflect two things:
 
-1) Random sampling error variance: $\frac{\sigma_{people}^2}{na}$
-2) The variance of the population means $\sigma_{\mu_B}^2$
+1) Variability in sample means due to random sampling: $\frac{\sigma_{people}^2}{na}$
+2) Variability in sample means due differences among the population means $\sigma_{\mu_B}^2$
+
 
 In mathematical terms we say the Expected Mean Square is:
 
@@ -780,7 +781,7 @@ F &= \frac{\text{estimated total variance}}{\text{estimated variance due to rand
 $$
 
 
-This estimate tells us that, with these data, the **estimated** total variance is preparation means is 3.62 times larger than than we would **estimate** due to random sampling alone. This sounds like a larger number - but it may not be. Notice the use of word **estimate(d)** in the previous sentences. We are looking at estimates that themselves may vary due to random sampling error. So we need to know how likely this is in the context of the the number of sampling means and the sample sizes. Said another way, we need to interpret this F-value in terms of its degrees of freedom.
+This estimate tells us that, with these data, the **estimated** total variance of preparation means is 3.62 times larger than than we would **estimate** due to random sampling alone. This sounds like a larger number - but it may not be. Notice the use of word **estimate(d)** in the previous sentences. We are looking at estimates that themselves may vary due to random sampling error. So we need to know how likely this is in the context of the the number of sampling means and the sample sizes. Said another way, we need to interpret this F-value in terms of its degrees of freedom. [Recall Central F-distributions from a previous chapter.](https://dstanley4.github.io/psyc6060bookdown/deep-dive-sampling-and-anova.html#central-f-distributions)
 
 We know that the degrees of freedom for this F-value are (2,24). We we can ask the question, **when the population means are the same** (i.e., $\sigma_{B}^2=0$) how likely is it that would would obtain an F-value this large or larger. That is, what is the p-value for this F-value? It turns out the p-value is very small ($p = .042$). Consequently, under the assumption of equal population means, our data (or more extreme data) is very unlikely ($p  = .042$). Therefore, we reject that starting assumption that the population means (i.e., the population means for preparation) are equal. We conclude those population means **may** be different.
 
